--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     },
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^4.0"
+        "phpmd/phpmd": "^2.6",
+        "phpunit/phpunit": "^4.0",
+        "sebastian/phpcpd": "^2.0",
+        "squizlabs/php_codesniffer": "^3.0"
     }
 }
-
