--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ php:
   - "7.0"
   - "7.1"
 
+services:
+  - redis-server
+
+before_install:
+  - "echo 'extension = redis.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini"
+
 install:
   - "composer install --prefer-dist --no-interaction --no-progress --no-suggest"
 
