--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "guzzlehttp/streams": "^3.0"
     },
     "require-dev": {
+        "ext-redis": "*",
+
         "phpmd/phpmd": "^2.6",
         "phpunit/phpunit": "^4.0",
         "sebastian/phpcpd": "^2.0",
