--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 script:
   - "find src -type f -name '*.php' -print0 | xargs -0 -n1 php -l"
-  - "composer exec -v -- phpcs --standard=PSR2 src"
-  - "composer exec -v -- phpmd src text phpmd.xml"
-  - "composer exec -v -- phpcpd src"
-  - "composer exec -v  -- phpunit --coverage-text"
+  - "composer exec -v  -- phpunit --coverage-clover build/logs/clover.xml"
+
+after_success:
+  - "vendor/bin/test-reporter"
