--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,15 @@
         "phpunit/phpunit": "^4.0",
         "sebastian/phpcpd": "^2.0",
         "squizlabs/php_codesniffer": "^3.0"
+    },
+    "archive": {
+        "exclude": [
+            "/*.xml*",
+            "/.*",
+            "/_*",
+            "/build",
+            "/tests",
+            "/vendor"
+        ]
     }
 }
