Tune duplication detection

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -15,7 +15,8 @@ engines:
       enabled: true
       config:
         languages:
-        - php:
+          php:
+            mass_threshold: 50
 
 ratings:
   paths:
